<resources>
    <string name="app_name">Inmobiliaria Kiwi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Desconocido</string>
    <string name="nav_header_subtitle">Desconocido</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_inmuebles">Inmuebles</string>
    <string name="menu_contratos">Contratos</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_inquilinos">Inquilinos</string>
    <string name="cargar_inmueble">Cargar inmueble</string>
    <string name="detalle_del_contrato">Detalle del contrato</string>
    <string name="detalle_del_inquilino">Detalle del inquilino</string>
    <string name="pagos">Pagos</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="detalle_del_inmueble">Detalle del inmueble</string>
</resources>