<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.example.inmobiliarialab3.ui.inicio.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.inmobiliarialab3.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_inmuebles"
        android:name="com.example.inmobiliarialab3.ui.inmuebles.InmueblesFragment"
        android:label="@string/menu_inmuebles"
        tools:layout="@layout/fragment_inmuebles" >
        <action
            android:id="@+id/action_nav_inmuebles_to_detalleInmuebleFragment"
            app:destination="@id/detalle_inmueble_fragment" />
        <action
            android:id="@+id/action_nav_inmuebles_to_detalle_inmueble_fragment3"
            app:destination="@id/detalle_inmueble_fragment" />
        <action
            android:id="@+id/action_nav_inmuebles_to_cargarInmuebleFragment3"
            app:destination="@id/cargar_inmueble_fragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_inquilinos"
        android:name="com.example.inmobiliarialab3.ui.inquilinos.InquilinosFragment"
        android:label="@string/menu_inquilinos"
        tools:layout="@layout/fragment_inquilinos" >
        <action
            android:id="@+id/action_nav_inquilinos_to_detalleInquilinoFragment22"
            app:destination="@id/detalle_inquilino_fragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_contratos"
        android:name="com.example.inmobiliarialab3.ui.contratos.ContratosFragment"
        android:label="@string/menu_contratos"
        tools:layout="@layout/fragment_contratos" >
        <action
            android:id="@+id/action_nav_contratos_to_detalleContratoFragment"
            app:destination="@id/detalle_contrato_fragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.inmobiliarialab3.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
    <fragment
        android:id="@+id/detalle_inmueble_fragment"
        android:name="com.example.inmobiliarialab3.ui.inmuebles.DetalleInmuebleFragment"
        android:label="Detalle inmueble"
        tools:layout="@layout/fragment_detalle_inmueble" >
        <action
            android:id="@+id/action_detalle_inmueble_fragment_to_nav_inmuebles2"
            app:destination="@id/nav_inmuebles" />
    </fragment>
    <fragment
        android:id="@+id/cargar_inmueble_fragment"
        android:name="com.example.inmobiliarialab3.ui.inmuebles.CargarInmuebleFragment"
        android:label="@string/cargar_inmueble"
        tools:layout="@layout/fragment_cargar_inmueble" >
        <action
            android:id="@+id/action_cargarInmuebleFragment3_to_nav_inmuebles"
            app:destination="@id/nav_inmuebles" />
    </fragment>
    <fragment
        android:id="@+id/detalle_inquilino_fragment"
        android:name="com.example.inmobiliarialab3.ui.inquilinos.DetalleInquilinoFragment"
        android:label="fragment_detalle_inquilino"
        tools:layout="@layout/fragment_detalle_inquilino" >
        <action
            android:id="@+id/action_detalleInquilinoFragment2_to_nav_inquilinos2"
            app:destination="@id/nav_inquilinos" />
    </fragment>
    <fragment
        android:id="@+id/detalle_contrato_fragment"
        android:name="com.example.inmobiliarialab3.ui.contratos.DetalleContratoFragment"
        android:label="fragment_detalle_contrato"
        tools:layout="@layout/fragment_detalle_contrato" >
        <action
            android:id="@+id/action_detalleContratoFragment_to_nav_contratos"
            app:destination="@id/nav_contratos" />
        <action
            android:id="@+id/action_detalle_contrato_fragment_to_pagosFragment2"
            app:destination="@id/pagos_fragment" />
    </fragment>
    <fragment
        android:id="@+id/pagos_fragment"
        android:name="com.example.inmobiliarialab3.ui.contratos.PagosFragment"
        android:label="fragment_pagos"
        tools:layout="@layout/fragment_pagos" >
        <action
            android:id="@+id/action_pagosFragment_to_detalle_contrato_fragment2"
            app:destination="@id/detalle_contrato_fragment" />
    </fragment>
</navigation>